@@ -96,9 +96,10 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-17 17:38:12 L.105'22908 T704753245 .K ~745 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-10 13:19:13 L.112'38447 T3651870418.K ~33  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-22 17:22:22 L.100'23858 T2601790291.K ~749 +----+----+----+----+----+
+     TimeCnt : //z 2015-09-22 17:22:20 L.100'23860 T2601790289.K ~34  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~29  +----+----+----+----+----+
+     #29  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~29    V+.776  L+.813  
      #28  R+ : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28    V+.653  L+.691  
      #27  R+ : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~27    V+.583  L+.642  
      #26  R+ : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~26    V+.573  L+.634  
@@ -131,7 +132,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-17 17:38:12 L.105'22908 T704753245 .K ~773   R+.28   L+.806  --+----+
+     Version : //z 2015-09-22 17:22:22 L.100'23858 T2601790291.K ~778   R+.29   L+.815  --+----+
+     #40  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~776   R+.29   L+.814  V+.776  
      #40  V+ : //z 2015-09-07 09:52:04 L.115'50876 T1383629914.K ~760   R+.28   L+.798  
      #39  V+ : //z 2015-09-04 22:39:16 L.118'4844  T65304378  .K ~741   R+.28   L+.779  
      #38  V+ : //z 2015-08-25 17:58:14 L.128'21706 T1477339359.K ~722   R+.28   L+.757  
@@ -806,3 +808,9 @@ http://www.hollywoodcamerawork.com/greenscreenplates.html
 //z csdn 几篇 dx 教程
 http://blog.csdn.net/fox64194167/article/details/8073920
 #endregion //z 2015-08-18 18:06:06 L.135'21234 BG57IV3@XCL T728764508 .K.F4146951713-+----+----+
+
+#region 09-22 17:22 R#.29   @Math
+//z 2015-09-22 17:22:20 L.100'23860 T2601790289.K[T34,L813,R29,V778]
+01. 
+http://www.euclideanspace.com/maths/geometry/rotations/conversions/matrixToEuler/
+#endregion //z 2015-09-22 17:22:14 L.100'23866 BG57IV3@XCL T2601790260.K.F4146951713-+----+----+
